# O2RM-Model

./: .gitattributes  .gitignore  License.md  README.md  Readme.md  pyproject.toml  requirements.txt
notebooks/: Base_Training.ipynb  Changing Model Layout.ipynb  Training Current Model.ipynb  Training.ipynb  TrainingRM.py  load_model.py
resources/models/O2RM/: fingerprint.pb  keras_metadata.pb  saved_model.pb
resources/models/O2RM/variables/: variables.index
src/O2RM-Model/: O2RM.py  TrainingRM.py  __init__.py
src/O2RM-Model/Model/: layers.py
src/O2RM-Model/Model/setup/: input.py  middle.py  output.py
src/O2RM-Model/RecognitionModel/: layers.py  model.py
src/O2RM-Model/RecognitionModel/Setup/: input.py
src/O2RM-Model/RecognitionModel/setup/: input.py  middle.py  output.py  preprocessing.py
src/O2RMModel/: __init__.py  gpu_drivers.py
src/O2RMModel/RecognitionModel/: layers.py  model.py
src/O2RMModel/RecognitionModel/Setup/: __init__.py  middle.py  output.py
src/O2RMModel/RecognitionModel/Training/: momentum_callback.py  momentum_decay.py
src/O2RMResources/O2RM/: saved_model.pb
src/notebooks/: TrainingRM.py
tests/: test_default.py  test_gpu.py
wandb/: settings
