[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "O2RM-Model"
version = "0.0.2"

description = "Model to recognise symbols & letters"

authors = [
  { name="Kent vejrup Madsen", email="kent.vejrup.madsen@designermadsen.dk" },
]

readme = "Readme.md"
license= "License.md"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[

]

keywords=[

]

[project.urls]
"Homepage" = "https://github.com/KentVejrupMadsen/O2RM-Model"
"Bug Tracker" = "https://github.com/KentVejrupMadsen/O2RM-Model/issues"