[project]
name = "O2RM-Model"
version = "0.0.2"

description = "Model to recognise symbols & letters"

authors = [
  { name="Kent vejrup Madsen", email="kent.vejrup.madsen@designermadsen.dk" },
]

readme = "Readme.md"
license= {file='License.md'}

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[

]

keywords=[

]

[project.urls]
"Homepage" = "https://github.com/KentVejrupMadsen/O2RM-Model"
"Issues" = "https://github.com/KentVejrupMadsen/O2RM-Model/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["O2RMModel"]
exclude = ["tests", "notebooks"]